# crm-v3

./: .gitignore  .replit  AZURE_DEPLOYMENT.md  AZURE_DEV_SETUP.md  DATA_DICTIONARY.md  LOCAL_SETUP.md  MIGRATION_FIXED.md  README_LOCAL.md  package-lock.json  package.json  pyproject.toml  replit.md  start.sh
backend/: .env.template  QUICKSTART.md  README.md  SETUP_LOCAL.md  database.py  fix_intake_columns.py  fix_platforms_table.py  main.py  migrate_db.py  models.py  requirements.txt  sample_data.py  seed_azure_db.py  test_main.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Button.tsx  Card.tsx  Layout.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AccountDetails.tsx  Admin.tsx  AdminStates.tsx  AllAccounts.tsx  EditAccount.tsx  IntakeForm.tsx  IntakeTriage.tsx  NewAccount.tsx
frontend/src/types/: index.ts
